--- a/stylesheets/hero.css
+++ b/stylesheets/hero.css
@@ -117,6 +117,10 @@
 		width: calc(100%) !important;
 		margin-right: 0px !important;
 	}
+
+	#divider {
+		color: blue;
+	}
 }
 
 @media (min-aspect-ratio: 1080/645){
@@ -137,13 +141,20 @@ html, body {
 	height: 100%;
 	width: 100%;
 	margin: 0;
-	padding: 0;
 	font-size: 62.5%;
 	font-family: "PT Sans";
 }
 
 html {
 	background-color: #E8E4D8;
+	/*padding-bottom: 40px;*/
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 0;
+}
+
+body {
+	padding: 0;
 }
 
 /* HERO IMAGE */
