--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -12,17 +12,26 @@
 	}
 }
 
+.fixedTopMenu {
+	position: fixed;
+	top: 0px;
+}
+
+.fixedBottomMenu {
+	position: fixed;
+	bottom: 0px;
+}
+
+.staticMenu {
+	position: relative;
+	top: 0px;
+}
+
+
 #menu {
 	width: 100%;
 	height: 50px;
 	background-color: #479AFF;
-	position: relative;
-	top: 0px;
-
-	/*BAD*/
-	/*bottom: 0px;*/
-	/*top: 0px;
-	position: fixed;*/
 }
 
 #placeholder {
@@ -52,7 +61,7 @@
 	text-decoration: none;
 }
 
-#menu li:hover {
+#menu li a:hover {
 	color: white;
 	cursor: pointer;
 }
